--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,20 +9,23 @@
       <li class="nav-item" [class.active]="isActive('home')">
         <a class="nav-link" routerLink="/home">Home</a>
       </li>
-      <li class="nav-item" [class.active]="isActive('map')">
-        <a class="nav-link" routerLink="/map">Map</a>
-      </li>
       <li class="nav-item" [class.active]="isActive('carousing')">
         <a class="nav-link" routerLink="/carousing">Carousing</a>
+      </li>
+      <li class="nav-item" [class.active]="isActive('combat')">
+        <a class="nav-link" routerLink="/combat">Combat</a>
       </li>
       <li class="nav-item" [class.active]="isActive('force')">
         <a class="nav-link" routerLink="/force">Force</a>
       </li>
+      <li class="nav-item" [class.active]="isActive('gadgets')">
+        <a class="nav-link" routerLink="/gadgets">Gadgets</a>
+      </li>
+      <li class="nav-item" [class.active]="isActive('map')">
+        <a class="nav-link" routerLink="/map">Galaxy Map</a>
+      </li>
       <li class="nav-item" [class.active]="isActive('magical-items')">
         <a class="nav-link" routerLink="/magical-items">Magical Items</a>
-      </li>
-      <li class="nav-item" [class.active]="isActive('combat')">
-        <a class="nav-link" routerLink="/combat">Combat</a>
       </li>
       <li class="nav-item" [class.active]="isActive('monster-manual')">
         <a class="nav-link" routerLink="/monster-manual">Monster Manual</a>
