--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,21 +5,19 @@
     <p-panel class="ui-grid-col-4 home-panel">
       <p-header>
         <div class="ui-helper-clearfix" style="text-align:center">
-          <a routerLink="/map"><button pButton type="button" label="Map" icon="fa-map"></button></a>
+          <a routerLink="/carousing"><button pButton type="button" label="Carousing" icon="fa-beer"></button></a>
         </div>
       </p-header>
-      The map page contains a force-directed graph of the Star Wars universe. On this page, you can learn things about the planets
-      in the Star Wars universe such as the climate and inhabitants. In addition, you can use the tool presented to find the
-      shortest path between certain planets.
+      The carousing page has a generator on it which will allow you to get random carousing results for your players.
     </p-panel>
 
     <p-panel class="ui-grid-col-4 home-panel">
       <p-header>
         <div class="ui-helper-clearfix" style="text-align:center">
-          <a routerLink="/carousing"><button pButton type="button" label="Carousing" icon="fa-beer"></button></a>
+          <a routerLink="/combat"><button pButton type="button" label="Combat" icon="fa-shield"></button></a>
         </div>
       </p-header>
-      The carousing page has a generator on it which will allow you to get random carousing results for your players.
+      The combat page is an initiative tracker. It uses the data from the monster compendium page to allow you to pull in and roll HP and initiative for monsters, and it helps you keep track the state of combat all on one page.
     </p-panel>
 
     <p-panel class="ui-grid-col-4 home-panel">
@@ -35,21 +33,31 @@
     <p-panel class="ui-grid-col-4 home-panel">
       <p-header>
         <div class="ui-helper-clearfix" style="text-align:center">
-          <a routerLink="/magical-items"><button pButton type="button" label="Magical Items" icon="fa-magic"></button></a>
+          <a routerLink="/gadgets"><button pButton type="button" label="Gadgets" icon="fa-cog"></button></a>
         </div>
       </p-header>
-      The magical items page is a compendium of the magical items created for the Star Wars 5e conversion.
+      The gadgets page contains a list of all the available gadgets for the Engineer class, all the weapon modifications for the Trooper class, and all the gadgets usable by the Mercenary class.
     </p-panel>
 
     <p-panel class="ui-grid-col-4 home-panel">
       <p-header>
         <div class="ui-helper-clearfix" style="text-align:center">
-          <a routerLink="/combat"><button pButton type="button" label="Combat" icon="fa-shield"></button></a>
+          <a routerLink="/map"><button pButton type="button" label="Galaxy Map" icon="fa-map"></button></a>
         </div>
       </p-header>
-      The combat page is an initiative tracker. It uses the data from the monster compendium page to allow you to pull in and roll HP and initiative for monsters, and it helps you keep track the state of combat all on one page.
+      The galaxy map page contains a force-directed graph of the Star Wars universe. On this page, you can learn things about the planets in the Star Wars universe such as the climate and inhabitants. In addition, you can use the tool presented to find the shortest path between certain planets.
     </p-panel>
 
+    <p-panel class="ui-grid-col-4 home-panel">
+      <p-header>
+        <div class="ui-helper-clearfix" style="text-align:center">
+          <a routerLink="/magical-items"><button pButton type="button" label="Magical Items" icon="fa-magic"></button></a>
+        </div>
+      </p-header>
+      The magical items page is a compendium of the magical items created for the Star Wars 5e conversion.
+    </p-panel>
+  </div>
+  <div class="ui-grid-row">
     <p-panel class="ui-grid-col-4 home-panel">
       <p-header>
         <div class="ui-helper-clearfix" style="text-align:center">
