--- a/src/app/combat/combat.component.html
+++ b/src/app/combat/combat.component.html
@@ -1,6 +1,6 @@
 <div class="title">
   <h1>Combat</h1>
-  <p>The combat page uses <code>localStorage</code> to save your combat scenarios. When you add a monster, click anywhere on the row to see its stats.</p>
+  <p>The combat page uses <code>localStorage</code> to save your combat scenarios. When you add a monster, click anywhere on the row to see its <monster-overlay monster-string="bandit-captain" text="stats"></monster-overlay>.</p>
 </div>
 <hr/>
 
@@ -13,7 +13,7 @@
   </p-column>
   <p-column field="challenge" header="CR/Level" [style]="{'overflow':'visible'}">
     <ng-template let-col let-monster="rowData" pTemplate="body">
-      <p-dropdown class="always-black" [options]="isMonster(monster) ? crItems : levelItems" [disabled]="isMonster(monster)" [(ngModel)]="monster[col.field]" (change)="saveState()"></p-dropdown>
+      <p-dropdown class="always-black" [options]="isMonster(monster) ? crItems : levelItems" [disabled]="isMonster(monster)" [(ngModel)]="monster[col.field]" (onChange)="saveState()"></p-dropdown>
     </ng-template>
   </p-column>
   <p-column field="name" header="Name">
@@ -50,11 +50,13 @@
 <div class="ui-grid ui-g-12">
   <div class="ui-g-12">
     <h5>Difficulty: {{ diff.diff }}</h5>
-    <small class="text-muted">({{ diff.xp }}xp({{ diff.diff }}) vs {{ diff.pxp }}xp)</small>
+    <small class="text-muted">({{ diff.xp }} monster xp vs {{ diff.pxp }} player xp for {{ _.lowerCase(diff.diff) }} difficulty)</small>
   </div>
   <div class="ui-g-12 ui-md-6">
     <h3>Add Monster</h3>
     <p-dropdown [options]="monsterOptions" [(ngModel)]="newMonster" filter="filter" [style]="{'width':'200px'}"></p-dropdown>
+    <button type="button" pButton (click)="addMonsterSync(newMonster)" [disabled]="!newMonster || !monsterValid(newMonster)" label="Add Monster"></button>
+    <button type="text" pButton class="ui-button-warning" label="Clear" (click)="initNewMonster()"></button>
     <div *ngIf="!!newMonster">
       <hr/>
       <div class="ui-g-1"></div>
@@ -122,7 +124,6 @@
             </label>
           </div>
         </div>
-        <button type="button" pButton (click)="addMonsterSync(newMonster)" [disabled]="!newMonster || !monsterValid(newMonster)" label="Add Monster"></button>
       </div>
       <div class="ui-g-1"></div>
     </div>
