--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,6 +37,6 @@
 
 <router-outlet class="ui-g-12"></router-outlet>
 
-<footer class="navbar fixed-bottom navbar-light bg-faded">
+<footer class="navbar static-bottom fixed-bottom navbar-light bg-faded">
   <a class="navbar-brand" href="https://github.com/jeddai/star-wars-5e" target="_blank"><i class="fa fa-github"></i> Github</a>
 </footer>
