--- a/src/app/force/force.component.html
+++ b/src/app/force/force.component.html
@@ -2,7 +2,7 @@
 <hr/>
 
 <p-tabMenu [model]="items"></p-tabMenu>
-<p-dataTable [value]="abilities" expandableRows="true" #dt (onRowClick)="dt.toggleRow($event.data)" *ngIf="activeItem == 'table'" [rows]="15" [paginator]="true" [pageLinks]="5" [responsive]="true" [stacked]="stacked">
+<p-dataTable [value]="abilities" expandableRows="true" #dt (onRowClick)="dt.toggleRow($event.data)" *ngIf="activeItem.label == 'Ability Table'" [rows]="15" [paginator]="true" [pageLinks]="5" [responsive]="true" [stacked]="stacked">
   <p-header>List of Abilities</p-header>
   <p-column field="name" header="Name" [sortable]="true" [filter]="true" filterPlaceholder="Search"></p-column>
   <p-column field="discipline" header="Discipline" [sortable]="true" [filter]="true" filterPlaceholder="Search"></p-column>
@@ -75,7 +75,7 @@
   </ng-template>
 </p-dataTable>
 
-<div *ngIf="activeItem == 'selector'" style="padding: 5px 5px 5px 5px;">
+<div *ngIf="activeItem.label == 'Select Disciplines'" style="padding: 5px 5px 5px 5px;">
   <p-multiSelect [options]="selectDisciplines" [(ngModel)]="selectedDisciplines" (onChange)="saveSelectedDisciplines()"></p-multiSelect>
   <div class="ui-grid ui-grid-responsive" *ngFor="let discipline of disciplines">
     <div class="panel-padding" *ngIf="selectedDisciplines.includes(discipline.name)">
