--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,6 +1,8 @@
 <h1 class="title">Map</h1>
 <hr/>
 
+<p-growl class="growl" [(value)]="messages" [life]="300"></p-growl>
+
 <div class="ui-grid ui-grid-responsive">
   <div class="ui-grid-row">
     <div id="main" class="ui-grid-col-6" style="text-align:right">
@@ -8,7 +10,9 @@
     </div>
     <div class="ui-grid-col-6">
       <small id="legend"></small>
-      <p>The distance calculator and settings are coming back soon!</p>
+      <p-autoComplete placeholder="Planet 1" [(ngModel)]="p1" [suggestions]="planets1" (completeMethod)="search('planets1', $event)"></p-autoComplete>
+      <p-autoComplete placeholder="Planet 2" [(ngModel)]="p2" [suggestions]="planets2" (completeMethod)="search('planets2', $event)"></p-autoComplete>
+      <button type="button" pButton label="Find Path" (click)="getDirections(p1, p2)"></button>
     </div>
   </div>
 </div>
