--- a/src/app/monster-overlay/monster-overlay.component.html
+++ b/src/app/monster-overlay/monster-overlay.component.html
@@ -1,6 +1,6 @@
 <p-overlayPanel #op>
     <div class="overlay">
-      <monster *ngIf="show()" [monster]="monster" [size]="{ 'font_size': 8 }"></monster>
+      <app-monster *ngIf="show()" [monster]="monster" [size]="{ 'font_size': 8 }"></app-monster>
     </div>
 </p-overlayPanel>
 
