--- a/src/app/monster-manual/monster-manual.component.html
+++ b/src/app/monster-manual/monster-manual.component.html
@@ -40,7 +40,7 @@
     <div class="ui-g ui-grid ui-grid-responsive ui-fluid" style="font-size:16px;padding:20px">
       <div class="ui-g-2"></div>
       <div class="ui-g-8">
-        <monster [monster]="monster"></monster>
+        <app-monster [monster]="monster"></app-monster>
       </div>
     </div>
   </ng-template>
