--- a/src/app/monster/monster.component.html
+++ b/src/app/monster/monster.component.html
@@ -73,13 +73,9 @@
       <span class="ui-g-12 ui-md-10" [innerHtml]="abl.desc | markdown"></span>
     </div>
   </div>
-  <div *ngIf="!_.isEmpty(monster.actions) || !_.isEmpty(monster.abilities)">
+  <div *ngIf="!_.isEmpty(monster.actions) || !_.isEmpty(monster.actions)">
     <hr/>
     <h3 [style.font-size.px]="size.font_size+6">Actions</h3>
-    <div class="ui-grid-row" *ngFor="let abl of monster.special_abilities">
-      <strong class="ui-g-2"><em>{{ abl.name }}.</em></strong>
-      <span class="ui-g-12 ui-md-10" [innerHtml]="abl.desc | markdown"></span>
-    </div>
     <div class="ui-grid-row" *ngFor="let act of monster.actions">
       <strong class="ui-g-2"><em>{{ act.name }}.</em></strong>
       <span class="ui-g-12 ui-md-10" [innerHtml]="act.desc | markdown"></span>
